<resources>
    <string name="app_name">Quick Bills</string>
    <string name="log_in_text">Already have an account?</string>
    <string name="sign_up_text">Create an Account</string>
    <string name="email_hint"> Email: </string>
    <string name="email_icn_description">Email Icon</string>
    <string name="password_hint">Password:</string>
    <string name="submit_btn">Proceed</string>
    <string name="dashboard_title">My Dashboard</string>
    <string name="new_bill_icn_description">New Bill Icon</string>
    <string name="new_bill">New Bill</string>
    <string name="customers_tab">Customers</string>
    <string name="prices">My Prices</string>
    <string name="old_bills_text">All Bills</string>
    <string name="sales_text">My Sales</string>
    <string name="my_account">My Account</string>
    <string name="search_customer_text">Search</string>
    <string name="add_customer_icon">New Customer Icon</string>
    <string name="customer_name_textview">Customer Name</string>
    <string name="customer_mobile_dummy_text">1234567890</string>
    <string name="customer_address_dummy_text">New Delhi, India</string>
    <string name="customer_icon_description">Customer Icon</string>
    <string name="edit_customer_icon_description">Edit Customer Icon</string>
    <string name="delete_customer_icon_description">Delete Customer Icon</string>
    <string name="add_customer_pop_up_hint">Name</string>
    <string name="add_customer_mob_pop_up_hint">Mobile</string>
    <string name="add_customer_address_pop_up_hint">Address</string>
    <string name="add_customer_pop_up_button">Add Customer</string>
    <string name="item_icon_description">Price Icon</string>
    <string name="item_name_textview">Item Name</string>
    <string name="item_price_dummy_text">$506.20</string>
    <string name="edit_item_icon_description">Edit Item Icon</string>
    <string name="delete_item_icon_description">Delete Item Icon</string>
    <string name="welcome_text">Welcome To Quick Bills</string>
    <string name="welcome_text_2">Billing Made Easy &#8230;</string>
    <string name="log_in_screeen_text">Log-In</string>
    <string name="log_in_icon_description"> Log-In Icon </string>
    <string name="sign_up_icon_description"> Sign-Up Icon </string>
    <string name="sign_up_screeen_text">Sign-Up</string>
    <string name="confirm_password_hint">Confirm Password:</string>
    <string name="user_name_hint">Your Good Name:</string>
    <string name="edit_customer_icon">Edit Customer Icon</string>
    <string name="edit_customer_pop_up_button">Update Customer</string>
    <string name="item_name_default_text">Item Name </string>
    <string name="item_price_default_text">Price</string>
    <string name="item_quantity_default_text">Qty</string>
    <string name="item_amount_default_text">Amount</string>
    <string name="delete_msg">Are you sure to delete this item?</string>
    <string name="cancel_delete_btn_text">Cancel</string>
    <string name="delete_icn_content_description">Delete Icon</string>
    <string name="delete_btn_text">Delete</string>
    <string name="log_out_title">Log out</string>
    <string name="welcome_msg">Hello: </string>
    <string name="user_name_dummy_text">user_name</string>
    <string name="add_new_customer_btn_description">Add Customer Button</string>
    <string name="add_new_item_btn_description">Add Item Button</string>
    <string name="add_item_icon">Add Item Icon</string>
    <string name="add_item_name_pop_up_hint">Item Name</string>
    <string name="add_item_price_pop_up_hint">Item Price</string>
    <string name="add_item_pop_up_button">Add Item</string>
    <string name="edit_item_pop_up_button">Update Price</string>
    <string name="choose_customer_pop_up_button">Select Customer</string>
    <string name="autcomplete_name_dummy_text">Name</string>
    <string name="add_bill_row_btn">Add New Item</string>
    <string name="choose_item_name_pop_up_hint">Item Name</string>
    <string name="choose_new_particular_qty_pop_up_hint">Qty</string>
    <string name="add_new_particular_pop_up_button">Proceed</string>
    <string name="choose_new_particular_rate_pop_up_dummy">Rate</string>
    <string name="choose_new_particular_amount_pop_up_dummy">Amount</string>
    <string name="bill_amount_dummy_text">₹ 0.0</string>
    <string name="amount_text">Amount</string>
    <string name="rupee">₹ %1$.1f</string>
    <string name="save_title">Save</string>
    <string name="exit_msg">Want to discard all data and exit?</string>
    <string name="exit_btn_text">Yes</string>
    <string name="delete_bill_icon_description">Delete Bill Icon</string>
    <string name="purchase_time_dummy_text">00:00</string>
    <string name="print_pdf_icon_description">Print as PDF</string>
    <string name="purchase_amount_dummy_text">₹ 1000</string>
    <string name="row_date_dummy_text">27 Jul 2000</string>
    <string name="date_menu_title">Pick Date</string>
    <string name="reset_password_text">Send Reset E-mail</string>
    <string name="set_theme_title">Theme</string>
    <string name="user_logo_description">Your Logo</string>
    <string name="user_email_hint">Your Email-Id:</string>
    <string name="user_number_hint">Your Commercial Number:</string>
    <string name="user_brand_hint">Your Shop Name:</string>
    <string name="user_brand_address_hint">Your Shop Address:</string>
    <string name="new_logo_icon_description">Upload New Logo</string>
    <string name="user_name_heading">Your Name:</string>
    <string name="user_brand_name_heading">Your Brand (Shop) Name:</string>
    <string name="user_brand_contact_heading">Your Commercial Contact:</string>
    <string name="user_brand_location_heading">Your Commercial Address:"</string>
    <string name="default_email_text">you@example.com</string>
    <string name="user_name_icon_description">Your Name Icon</string>
    <string name="user_mobile_icon_description">Mobile Number Icon</string>
    <string name="user_brand_location_icon_description">Location Icon</string>
    <string name="default_name_text">Name Surname</string>
    <string name="default_brand_name_text">Your Company Pvt. Ltd.</string>
    <string name="default_brand_number_text">9876543210</string>
    <string name="default_address_text">New Delhi, India</string>
    <string name="edit_your_name_icon_description">Edit Your Name</string>
    <string name="edit_your_brand_name_icon_description">Edit Your Brand(Shop) Name</string>
    <string name="edit_your_brand_number_icon_description">Edit Your Brand(Shop) Number</string>
    <string name="edit_your_brand_location_icon_description">Edit Your Brand(Shop) Location</string>
    <string name="brand_icon_description">Shop (Brand) Icon</string>
    <string name="reset_password_text2">Reset Password</string>
    <string name="delete_account_text">Delete your Data</string>
    <string name="icon_account">Default Icon</string>
    <string name="default_heading_text">Property Name</string>
    <string name="default_hint">Default Hint</string>
    <string name="account_btn_default_hint">Update Default</string>
</resources>