<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_bill_activity_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.NewBillActivity">

    <androidx.cardview.widget.CardView
        style="@style/CardView.Dark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bill_heading_card"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/customer_name"
                style="@style/TextAppearance.Compat.Notification.Info.Media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_above="@id/customer_mobile_view_id"
                android:text="@string/autcomplete_name_dummy_text"
                android:textColor="@color/foreground"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/customer_address_text_view_id"
                style="@style/TextAppearance.Compat.Notification.Info.Media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_mobile_view_id"
                android:layout_alignStart="@id/customer_name"
                android:text="@string/customer_address_dummy_text"
                android:textColor="@color/foreground"
                android:textSize="18sp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:id="@+id/customer_mobile_view_id"
                style="@style/TextAppearance.Compat.Notification.Info.Media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/customer_name"
                android:layout_centerVertical="true"
                android:text="@string/customer_mobile_dummy_text"
                android:textColor="@color/foreground"
                android:textSize="18sp"
                android:textStyle="normal|italic|bold" />

            <TextView
                android:id="@+id/bill_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:text="@string/bill_amount_dummy_text"
                android:textColor="@color/secondary"
                android:textSize="34sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/bill_amount"
                android:layout_alignStart="@id/bill_amount"
                android:text="@string/amount_text"
                android:textColor="@color/secondary" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bill_heading_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/particularsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_without_radius"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/item_name_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1.75"
                android:text="@string/item_name_default_text"
                android:textColor="@color/foreground"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_price_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1.2"
                android:padding="2dp"
                android:text="@string/item_price_default_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/foreground"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_qty_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/item_quantity_default_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/foreground"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_amount_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1.25"
                android:padding="2dp"
                android:text="@string/item_amount_default_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/foreground"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/particularsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="504dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/row_bill" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewParticularBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:clickable="true"
        android:contentDescription="@string/add_bill_row_btn"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/new_bill_activity_id"
        app:layout_constraintEnd_toEndOf="@id/new_bill_activity_id"
        app:srcCompat="@drawable/ic_add_new" />

</androidx.constraintlayout.widget.ConstraintLayout>