<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".activity.MyAccountActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/sample_logo"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:srcCompat="@drawable/ic_camera"
            android:contentDescription= "@string/new_logo_icon_description" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/account_email_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/surface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image">

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:padding="10dp"
                android:text="@string/default_email_text"
                android:textAlignment="center"
                android:textColor="@color/foreground"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/surface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_email_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/surface">

                <ImageView
                    android:id="@+id/icon_user_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_person"
                    android:contentDescription="@string/user_name_icon_description" />

                <TextView
                    android:id="@+id/heading_user_name_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/icon_user_name"
                    android:text="@string/user_name_heading"
                    android:textColor="@color/text_hint"
                    android:textSize="10sp"
                    tools:ignore="RelativeOverlap,SmallSp" />

                <TextView
                    android:id="@+id/user_name_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading_user_name_account"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/icon_user_name"
                    android:text="@string/default_name_text"
                    android:textColor="@color/foreground"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/edit_user_name"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/edit_your_name_icon_description" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_brand_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/surface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/surface">

                <ImageView
                    android:id="@+id/icon_user_brand_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_shop"
                    android:contentDescription="@string/brand_icon_description" />

                <TextView
                    android:id="@+id/heading_user_brand_name_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/icon_user_brand_name"
                    android:text="@string/user_brand_name_heading"
                    android:textColor="@color/text_hint"
                    android:textSize="10sp"
                    tools:ignore="RelativeOverlap,SmallSp" />

                <TextView
                    android:id="@+id/user_brand_name_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading_user_brand_name_account"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/icon_user_brand_name"
                    android:text="@string/default_brand_name_text"
                    android:textColor="@color/foreground"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/edit_your_brand_name_icon_description"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_brand_number_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/surface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_brand_name_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/surface">

                <ImageView
                    android:id="@+id/icon_user_brand_number"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_baseline_call_24"
                    android:contentDescription="@string/user_mobile_icon_description" />

                <TextView
                    android:id="@+id/heading_user_brand_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/icon_user_brand_number"
                    android:text="@string/user_brand_contact_heading"
                    android:textColor="@color/text_hint"
                    android:textSize="10sp"
                    tools:ignore="RelativeOverlap,SmallSp" />

                <TextView
                    android:id="@+id/user_brand_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading_user_brand_number"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/icon_user_brand_number"
                    android:text="@string/default_brand_number_text"
                    android:textColor="@color/foreground"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/edit_your_brand_number_icon_description" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_brand_location_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/surface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_brand_number_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/surface">

                <ImageView
                    android:id="@+id/icon_user_brand_address"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/user_brand_location_icon_description"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/heading_user_brand_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/icon_user_brand_address"
                    android:text="@string/user_brand_contact_heading"
                    android:textColor="@color/text_hint"
                    android:textSize="10sp"
                    tools:ignore="RelativeOverlap,SmallSp" />

                <TextView
                    android:id="@+id/user_brand_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading_user_brand_address"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/icon_user_brand_address"
                    android:text="@string/default_address_text"
                    android:textColor="@color/foreground"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/edit_your_brand_location_icon_description"
                    android:src="@drawable/ic_baseline_edit_24" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/user_brand_location_card">

            <Button
                android:id="@+id/reset_password_btn"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/reset_password_text2"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/delete_account_btn"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:backgroundTint="#FF0000"
                android:text="@string/delete_account_text"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>